tests: refactor list and payment usecase
