# src/infrastructure/configs/swagger_output.json
@@ -82,6 +82,16 @@
               }
             }
           },
+          "404": {
+            "description": "Parking records not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/errorResponse"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal Server Error",
             "content": {
